# chat_with_me

./: .gitignore  README.md  README_EN.md  pyproject.toml
docs/: collector_backends.md
src/social_persona_skill/: __init__.py  adapters.py  backends.py  cli.py  models.py  runtime.py  service.py  skills.py  storage.py  workflow.py
src/social_persona_skill/backend_helpers/: __init__.py  scweet_collect.py  xiaohongshu_collect.py
tests/: conftest.py  test_backends.py  test_skills.py  test_workflow.py
tests/live/: test_platform_backends.py  test_skill_build.py
